# text_editor_3

./: .gitignore  Cargo.toml  README.md  build_release.sh  lint_with_clippy.sh
.github/ISSUE_TEMPLATE/: documentation-request.md
.github/workflows/: clippy.yml
src/: main.rs
src/css/: mod.rs
src/date/: mod.rs
src/file_stream/: mod.rs
src/resources/css/: styles.css
src/resources/ui/: menu.ui
src/ui/: mod.rs
